--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -26,25 +26,23 @@
         {% endblock extra-css %}
     </head>
     <body class="bg-white dark:bg-gray-900">
-        {% include "includes/_navbar.html" %}
+        {% include "includes/navbar.html" %}
         {% block extra-nav %}
         {% endblock extra-nav %}
         <div class="{% if request.path == '/' %} mt-8 {% elif request.path != '/accounts/login/' %} w-full top-[25px] {% endif %} mb-20">
-            {% if messages %}
-                <div class="mx-auto max-w-screen-xl px-4 lg:px-12" id="messages">
-                    {% for message in messages %}
-                        {% if message.tags == 'info' or message.tags == 'success' %}
-                            <div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-brand-accent-light dark:bg-gray-800 dark:text-blue-400"
-                                 role="alert">{{ message }}</div>
-                        {% else %}
-                            <div class="p-4 mb-4 text-sm text-brand-danger-medium rounded-lg bg-brand-danger-light dark:bg-gray-800 dark:text-brand-danger-light"
-                                 role="alert">{{ message }}</div>
-                        {% endif %}
-                    {% endfor %}
+            <section class="antialiased py-8 md:py-12">
+                <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
+                    {% include "includes/breadcrumbs.html" %}
+                    <h2 class="mt-3 mb-5 text-xl font-semibold text-gray-900 dark:text-white sm:text-2xl">
+                        {% block page_header %}
+                            {{ breadcrumbs.crumbs|last }}
+                        {% endblock page_header %}
+                    </h2>
+                    {% include "includes/messages.html" %}
+                    {% block content %}
+                    {% endblock content %}
                 </div>
-            {% endif %}
-            {% block content %}
-            {% endblock content %}
+            </section>
         </div>
         <script>
             document.body.addEventListener('htmx:configRequest', (event) => {
