--- a/config/templates/odk_publish/form_template_list.html
+++ b/config/templates/odk_publish/form_template_list.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load django_tables2 %}
+{% block page_header %}
+    Form Templates
+{% endblock page_header %}
 {% block content %}
-    <section class="antialiased py-8 md:py-12">
-        <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">{% include "patterns/tables/table-partial.html" %}</div>
-    </section>
+    {% include "patterns/tables/table-partial.html" %}
 {% endblock %}
