--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -140,7 +140,7 @@
             <div class="px-0 lg:px-6">
                 <div class="flex items-center">
                     <ul class="flex flex-col mt-0 w-full text-sm font-medium md:flex-row">
-                        {% for tab in request.tabs %}
+                        {% for tab in request.odk_project_tabs %}
                             <li class="block border-b dark:border-gray-700 md:inline md:border-b-0">
                                 <a href="{{ tab.path }}"
                                    class="block py-3 px-4 hover:text-primary-600 {% if request.path == tab.path %}border-b-2 text-primary-600 dark:text-primary-500 dark:border-primary-500 border-primary-600{% else %} text-gray-500 dark:text-gray-400 hover:border-b-2 dark:hover:text-primary-500 dark:hover:border-primary-500 hover:border-primary-400{% endif %}"
