--- a/config/templates/odk_publish/form_template_list.html
+++ b/config/templates/odk_publish/form_template_list.html
@@ -5,4 +5,4 @@
 {% endblock page_header %}
 {% block content %}
     {% include "patterns/tables/table-partial.html" %}
-{% endblock %}
+{% endblock content %}
