--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -143,7 +143,7 @@
                         {% for tab in request.odk_project_tabs %}
                             <li class="block border-b dark:border-gray-700 md:inline md:border-b-0">
                                 <a href="{{ tab.path }}"
-                                   class="block py-3 px-4 hover:text-primary-600 {% if request.path == tab.path %}border-b-2 text-primary-600 dark:text-primary-500 dark:border-primary-500 border-primary-600{% else %} text-gray-500 dark:text-gray-400 hover:border-b-2 dark:hover:text-primary-500 dark:hover:border-primary-500 hover:border-primary-400{% endif %}"
+                                   class="block py-3 px-4 hover:text-primary-600 {% if tab.path in request.path %}border-b-2 text-primary-600 dark:text-primary-500 dark:border-primary-500 border-primary-600{% else %} text-gray-500 dark:text-gray-400 hover:border-b-2 dark:hover:text-primary-500 dark:hover:border-primary-500 hover:border-primary-400{% endif %}"
                                    aria-current="page">{{ tab.label }}</a>
                             </li>
                         {% endfor %}
