--- a/config/assets/styles/tailwind-entry.css
+++ b/config/assets/styles/tailwind-entry.css
@@ -34,4 +34,18 @@
   .btn-primary {
     @apply border-primary-400 bg-gradient-to-r from-primary-100 via-primary-200 to-primary-200 dark:bg-none;
   }
+  .btn-disabled {
+    @apply cursor-not-allowed opacity-50;
+  }
+}
+
+[x-cloak] {
+  display: none !important;
+}
+
+.htmx-request .loading,
+.htmx-request.loading,
+.htmx-request .spinner,
+.htmx-request.spinner {
+  display: inline;
 }
