--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static django_htmx %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,7 +10,7 @@
                 crossorigin="anonymous"></script>
         <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
         <script defer
-                src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
+                src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
         <script>htmx.logAll()</script>
         <link href="{% static 'css/main.css' %}" rel="stylesheet" />
         {# favicon #}
@@ -114,5 +114,6 @@
 
             });
         </script>
+        {% django_htmx_script %}
     </body>
 </html>
