--- a/config/templates/odk_publish/app_user_export.html
+++ b/config/templates/odk_publish/app_user_export.html
@@ -5,7 +5,7 @@
         <form method="post" class="max-w-2xl">
             {% csrf_token %}
             <div class="grid gap-4 sm:grid-cols-1 sm:gap-6">
-                <div id="id_file_container">
+                <div id="id_format_container">
                     {{ form.format.label_tag }}
                     {{ form.format }}
                     {{ form.format.errors }}
@@ -14,8 +14,7 @@
                     <button type="submit" class="btn btn-outline btn-primary">Submit</button>
                     <a type="button"
                        class="btn btn-outline"
-                       href="{% url 'odk_publish:app-user-list' request.odk_project.pk %}"
-                       :disabled="submitting">Cancel</a>
+                       href="{% url 'odk_publish:app-user-list' request.odk_project.pk %}">Cancel</a>
                 </div>
             </div>
         </form>
