--- a/config/templates/odk_publish/form_template_publish.html
+++ b/config/templates/odk_publish/form_template_publish.html
@@ -60,7 +60,7 @@
         </aside>
         <div class="grid w-full gap-4">
             {% partialdef publish-ws-init-partial inline %}
-                <div id="publish-ws-init-partial" hx-swap-oob="true" class="">
+                <div id="publish-ws-init-partial" hx-swap-oob="true">
                     {% if form.is_valid %}
                         <h3 class="flex items-center text-xl font-semibold leading-none text-gray-900 dark:text-white">Publish Events</h3>
                         <div class="my-4 grid gap-4 md:my-6 md:gap-12">
