--- a/config/templates/publish_mdm/devices_list.html
+++ b/config/templates/publish_mdm/devices_list.html
@@ -16,41 +16,100 @@
         <div id="inner-table">
             {% block table-header %}
                 {% include "includes/messages.html" with messages=devices_list_messages id_prefix="devices-alert" %}
-                <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0 mb-4">
-                    <button type="button"
-                            class="btn btn-outline btn-primary flex items-center justify-center text-sm px-4 py-2"
-                            data-modal-target="qr-codes-modal"
-                            data-modal-toggle="qr-codes-modal">
-                        <svg class="w-[20px] h-[20px] mr-2"
-                             aria-hidden="true"
-                             xmlns="http://www.w3.org/2000/svg"
-                             width="24"
-                             height="24"
-                             fill="currentColor"
-                             viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M4 4h6v6H4V4Zm10 10h6v6h-6v-6Zm0-10h6v6h-6V4Zm-4 10h.01v.01H10V14Zm0 4h.01v.01H10V18Zm-3 2h.01v.01H7V20Zm0-4h.01v.01H7V16Zm-3 2h.01v.01H4V18Zm0-4h.01v.01H4V14Z" />
-                            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M7 7h.01v.01H7V7Zm10 10h.01v.01H17V17Z" />
-                        </svg>
-                        Enroll
-                    </button>
-                    <button name="sync"
-                            hx-post="{{ request.get_full_path }}"
-                            hx-target="#inner-table"
-                            hx-swap="outerHTML"
-                            hx-indicator=".syncing"
-                            hx-disabled-elt="this"
-                            class="btn btn-outline btn-primary text-sm px-4 py-2 disabled:opacity-50 disabled:cursor-not-allowed">
-                        Sync From MDM
-                        <svg aria-hidden="true"
-                             role="status"
-                             class="syncing hidden items-center w-4.5 h-4.5 ml-1.5 -mr-1 -mt-0.5 me-3 text-gray-200 animate-spin dark:text-gray-600"
-                             viewBox="0 0 100 101"
-                             fill="none"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor" />
-                            <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="#1C64F2" />
-                        </svg>
-                    </button>
+                <div class="flex flex-col items-center justify-between mb-4 space-y-3 md:flex-row md:space-y-0 md:space-x-4">
+                    <div class="w-full md:w-1/2">
+                        <form class="flex items-center"
+                              hx-get="{% querystring without 'search' 'page' %}"
+                              hx-target="#inner-table"
+                              hx-swap="outerHTML"
+                              hx-push-url="true"
+                              hx-indicator=".progress">
+                            <label for="{{ search_form.search.auto_id }}" class="sr-only">Search</label>
+                            <div class="relative w-full *:[input]:pl-10">
+                                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                                    <svg aria-hidden="true"
+                                         class="w-5 h-5 text-gray-500 dark:text-gray-400"
+                                         fill="currentColor"
+                                         viewbox="0 0 20 20"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                                    </svg>
+                                </div>
+                                {{ search_form.search }}
+                            </div>
+                        </form>
+                    </div>
+                    <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
+                        <button type="button"
+                                class="btn btn-outline btn-primary flex items-center justify-center text-sm px-4 py-2"
+                                data-modal-target="qr-codes-modal"
+                                data-modal-toggle="qr-codes-modal">
+                            <svg class="w-[20px] h-[20px] mr-2"
+                                 aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M4 4h6v6H4V4Zm10 10h6v6h-6v-6Zm0-10h6v6h-6V4Zm-4 10h.01v.01H10V14Zm0 4h.01v.01H10V18Zm-3 2h.01v.01H7V20Zm0-4h.01v.01H7V16Zm-3 2h.01v.01H4V18Zm0-4h.01v.01H4V14Z" />
+                                <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M7 7h.01v.01H7V7Zm10 10h.01v.01H17V17Z" />
+                            </svg>
+                            Enroll
+                        </button>
+                        <button name="sync"
+                                hx-post="{{ request.get_full_path }}"
+                                hx-target="#inner-table"
+                                hx-swap="outerHTML"
+                                hx-indicator=".syncing"
+                                hx-disabled-elt="this"
+                                class="btn btn-outline btn-primary text-sm px-4 py-2 disabled:opacity-50 disabled:cursor-not-allowed">
+                            Sync From MDM
+                            <svg aria-hidden="true"
+                                 role="status"
+                                 class="syncing hidden items-center w-4.5 h-4.5 ml-1.5 -mr-1 -mt-0.5 me-3 text-gray-200 animate-spin dark:text-gray-600"
+                                 viewBox="0 0 100 101"
+                                 fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor" />
+                                <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="#1C64F2" />
+                            </svg>
+                        </button>
+                        <div id="filterDropdown"
+                             class="z-10 hidden min-w-40 p-3 pb-1 bg-white rounded-lg shadow dark:bg-gray-700">
+                            <h6 class="mb-3 text-gray-900 dark:text-white text-sm font-medium">Fleet</h6>
+                            <form hx-trigger="change"
+                                  hx-get="{% querystring without 'fleet' 'page' %}"
+                                  hx-target="#inner-table"
+                                  hx-swap="outerHTML"
+                                  hx-push-url="true"
+                                  hx-indicator=".progress"
+                                  class="space-y-2 text-sm font-medium **:[input]:mr-1">
+                                {{ filter.form.fleet }}
+                            </form>
+                        </div>
+                        <button id="filterDropdownButton"
+                                data-dropdown-toggle="filterDropdown"
+                                class="btn btn-outline btn-primary flex items-center justify-center text-sm px-4 py-2"
+                                type="button">
+                            <svg class="w-[20px] h-[20px] mr-2"
+                                 aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 viewBox="0 0 24 24">
+                                <path d="M5.05 3C3.291 3 2.352 5.024 3.51 6.317l5.422 6.059v4.874c0 .472.227.917.613 1.2l3.069 2.25c1.01.742 2.454.036 2.454-1.2v-7.124l5.422-6.059C21.647 5.024 20.708 3 18.95 3H5.05Z" />
+                            </svg>
+                            Filter
+                            <svg class="-mr-1 ml-1.5 w-5 h-5"
+                                 fill="currentColor"
+                                 viewbox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 aria-hidden="true">
+                                <path clip-rule="evenodd" fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             {% endblock table-header %}
             <div class="bg-white sm:rounded-md overflow-x-auto">
