--- a/config/templates/publish_mdm/devices_list.html
+++ b/config/templates/publish_mdm/devices_list.html
@@ -12,6 +12,18 @@
     </style>
 {% endblock extra-css %}
 {% block content %}
+    <script>
+    function fixEnrollModalBackdrop() {
+        // We call window.initFlowbite() on every `htmx:afterSwap` event (in base.html).
+        // This causes the device enrollment modal to lose its backdrop if it's currently
+        // open, due to a Flowbite bug:
+        // - https://github.com/themesberg/flowbite/issues/820
+        // - https://github.com/themesberg/flowbite/issues/1042
+        // Adding `hx-on::after-swap="fixEnrollModalBackdrop()"` to any HTMX targets
+        // within the device enrollment modal fixes the issue.
+        window.FlowbiteInstances.getInstance("Modal", "qr-codes-modal").show();
+    }
+    </script>
     {% partialdef devices-list-partial inline %}
         <div id="inner-table">
             {% block table-header %}
@@ -84,7 +96,8 @@
                             </button>
                         </div>
                         <div x-data="{device: null}" class="p-4 md:p-5">
-                            <div id="license-limit-messages"></div>
+                            <div id="license-limit-messages"
+                                 hx-on::after-swap="fixEnrollModalBackdrop()"></div>
                             <div class="flex w-full flex-col md:flex-row justify-center items-center space-x-0 md:space-x-2">
                                 <label class="font-medium text-gray-900 dark:text-white">Select a device type:</label>
                                 <div class="flex items-center">
@@ -120,7 +133,9 @@
                                 <p class="mb-4 dark:text-gray-400">
                                     Please fill in the form below and you will receive instructions on how to enroll your device.
                                 </p>
-                                <div id="byod">{% include "includes/device_enrollment_form.html" with form=byod_form %}</div>
+                                <div id="byod" hx-on::after-swap="fixEnrollModalBackdrop()">
+                                    {% include "includes/device_enrollment_form.html" with form=byod_form %}
+                                </div>
                                 <div class="w-full mt-6">
                                     <button id="byod-button"
                                             class="btn btn-outline btn-primary disabled:opacity-50 disabled:cursor-not-allowed">
@@ -137,7 +152,11 @@
                                     <label for="id_fleet" class="font-medium text-gray-900 dark:text-white">Fleet:</label>
                                     {{ enroll_form.fleet }}
                                 </div>
-                                {% include "includes/mdm_enroll_qr_code.html" %}
+                                <div id="qr-code"
+                                     class="w-full relative"
+                                     hx-on::after-swap="fixEnrollModalBackdrop()">
+                                    {% include "includes/mdm_enroll_qr_code.html" %}
+                                </div>
                             </form>
                         </div>
                     </div>
